2020-09-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfnames.c: Fix an incompatible behavior introduced by the
	previous changes on the named object (rev.55887).
	* configure.ac: Version 20200902.

2020-08-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Fix a bug exposed by the previous changes on the
	named object (rev.55887). Remove unnecessary spc_flush_object.
	* configure.ac: Version 20200826.

2020-08-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dpxutil.[ch]: Add stack operation.
	* epdf.[ch], pdfdraw.[ch]: Revise Clip path support for PSTricks.
	Revert changes related to "rectadd" introduced in rev.31262
	and rev.31302 which cause non-conforming behavior in "clip"
	operatation.
	* dvi.[c], mpost.c, pdfdev.[ch], pdfdoc.[ch], pdfdraw.[ch],
	spc_html.c, spc_misc.c. spc_pdfm.c, spc_xtx.c, specials.[ch]:
	Revise bcontent support. Try to resolve various inconsistent
	behaviors when special commnads are used within pdf:bcontent
	and pdf:econtent. dev_coords and pt_fixee are removed from pdf
	module and moved to specials.c.
	* mpost.h, spc_html.h, spc_misc.h, spc_pdfm.h, spc_xtx.h:
	Update copyright years.
	* configure.ac: Version 20200816.

2020-08-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* fontmap.[ch], pdffont.[ch], tt_aux.[ch], tt_cmap.[ch]:
	Use uint32_t for TTC index.

2020-07-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cid.c: Avoid accessing array elements exceeding max array index.
	* spc_pdfm.c: Check array elements also for to-unicode conversion.
	* tt_cmap.c: Additional changes are required for the previous CMap name fix.

2020-07-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Improve codes in unicode conversion and
	annotation rect calculation.
	* spc_xtx.c: Add missing reset_xgstate().
	* tt_cmap.c: Add wmode to auto-generated CMap names.

2020-07-28  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* pdfobj.c: Simple modifications for LIBDPX.
